apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - name: http
          containerPort: 32400
          protocol: TCP
        volumeMounts:
        - name: movies-volume
          mountPath: /movies
        - name: tv-volume
          mountPath: /tv
        - name: config-volume
          mountPath: /config
      volumes:
      - name: movies-volume
        persistentVolumeClaim:
          claimName: radarr-movies
      - name: tv-volume
        persistentVolumeClaim:
          claimName: sonarr-tv
      - name: config-volume
        persistentVolumeClaim:
          claimName: plex-config
